--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
-
--r requirements/common.txt
+Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
+Flask-Migrate==2.1.1
+Flask-SQLAlchemy==2.3.2
+Flask-Script==2.0.6
+Flask-WTF==0.14.2
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.0
+SQLAlchemy==1.2.6
+WTForms==2.1
+Werkzeug==0.14.1
+pymysql==0.8.0
