--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,24 +1,26 @@
-alembic==1.0.0
-click==6.7
-dominate==2.3.1
-Flask==0.12.2
-Flask-Bootstrap==3.3.7.1
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+dnspython==1.16.0
+enum34==1.1.6
+eventlet==0.24.1
+Flask==1.0.2
 Flask-Login==0.4.1
-Flask-Migrate==2.1.1
-Flask-Script==2.0.6
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
+Flask-SocketIO==3.2.0
+greenlet==0.4.15
 gunicorn==19.9.0
-itsdangerous==0.24
+idna==2.8
+itsdangerous==1.1.0
 Jinja2==2.10
-Mako==1.0.7
-MarkupSafe==1.0
-mysqlclient==1.3.13
-PyMySQL==0.8.0
-python-dateutil==2.7.3
-python-editor==1.0.3
-six==1.11.0
-SQLAlchemy==1.2.6
-visitor==0.1.3
+MarkupSafe==1.1.0
+monotonic==1.5
+parse==1.11.1
+PyMySQL==0.9.3
+python-engineio==3.3.0
+python-socketio==3.1.1
+PyYAML==3.13
+requests==2.21.0
+six==1.12.0
+urllib3==1.24.1
 Werkzeug==0.14.1
-WTForms==2.1
+zeroc-ice==3.7.1
